# LJMD_hpc_24_group_3

./: development.log.txt
01-ljmd/: CMakeLists.txt  README.md
01-ljmd/gtest/: .RData  CMakeLists.txt
01-ljmd/gtest/src/: ekin.c  force.c  ljmd.h  read_input.c  verlet.c
01-ljmd/gtest/tests/: test_ekin.cpp  test_force.cpp  test_read.cpp  test_read_inp.cpp  test_read_rest.cpp  test_utils.cpp  test_verlet.cpp
01-ljmd/src/: ekin.c  force.c  main.c  mdsys.h
01-ljmd_omp/src/: ljmd_omp.c
01-ljmd_omp_mpi/: job.sh
01-ljmd_omp_mpi/Obj-serial/: Makefile
01-ljmd_omp_mpi/examples/: argon_108.xyz  argon_2916.xyz
01-ljmd_omp_mpi/src/: eking.c  ljmd_omp.c  main.c
ljmd-separado/: CMakeLists.txt
ljmd-separado/src/: clean_up.c  clean_up.h  ekin.c  force.c  force.h  main.c  mdsys.c  mdsys.h  output.c  output.h  read_input.c  read_input.h  utilities.c  utilities.h  velverlet.c  velverlet.h
